--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -1,9 +1,10 @@
 name: Crowdin Action
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+#  push:
+#    branches:
+#      - main
 
 jobs:
   synchronize-with-crowdin:
@@ -17,6 +18,8 @@ jobs:
     - name: crowdin action
       uses: crowdin/github-action@1.4.0
       with:
+        debug_mode: true
+      
         upload_translations: true
         download_translations: true
       env:
